# OpenTextToFabric

./: .gitignore  README.md  config.py  migrate.py  progress.py  pyproject.toml  security.py
assessment/: __init__.py  artifact_healer.py  complexity.py  readiness_report.py  recovery_report.py  scanner.py  strategy_advisor.py  validator.py
content_handler/: __init__.py  downloader.py  ocr_client.py  renditions.py  versioning.py
deploy/: __init__.py  auth.py  deployer.py  fabric_client.py  multi_tenant.py  onelake_client.py  refresh_gateway.py
docs/: AGENTS.md  ARCHITECTURE.md  DEVELOPMENT_PLAN.md
fabric_output/: __init__.py  dataflow_generator.py  dax_recipes.py  fabric_constants.py  lakehouse_generator.py  m_query_generator.py  notebook_generator.py  pipeline_generator.py  tmdl_generator.py
governance/: __init__.py  acl_mapper.py  audit.py  classification_mapper.py  purview_mapper.py  security_validator.py
opentext_extract/: __init__.py  api_client.py  birt_parser.py  content_server.py  documentum_client.py  ihub_client.py
report_converter/: __init__.py  conditional_format.py  dax_optimizer.py  drill_through.py  expression_converter.py  multi_datasource.py  pbip_generator.py  plugins.py  visual_mapper.py
reporting/: __init__.py  generate_report.py  html_template.py  incremental.py  migration_report.py  regression.py  telemetry.py
samples/: sales_report.rptdesign
tests/: fixtures.py  test_api_client.py  test_artifact_healer.py  test_birt_parser.py  test_bookmarks.py  test_conditional_format.py  test_config_progress.py  test_content_handler.py  (+38 more)
(+12 files in other folders)
